# HuffmanArchiver

./: CMakeLists.txt  README.md  installer.sh  main.cpp
Archiver/: Archiver.cpp  Archiver.h
ArgumentParser/: ArgumentParser.cpp  ArgumentParser.h
Extractor/: Extractor.cpp  Extractor.h
Messenger/: Messenger.cpp  Messenger.h
PriorityQueue/: PriorityQueue.cpp  PriorityQueue.h
Reader/: Reader.cpp  Reader.h
Trie/: Trie.cpp  Trie.h
Writer/: Writer.cpp  Writer.h
